--- a/public/mymanage/login.html
+++ b/public/mymanage/login.html
@@ -4,8 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="css/common.css">
 </head>
-<body>
-  
+<body class="body_bg">
+ <div class="container">
+  <div class="col-lg-4 col-lg-offset-4">
+    <div class="lg_title"></div>
+    <div class="lg_content"></div>
+  </div>
+ </div>
+ <script src="lib/jquery/jquery.min.js"></script>
+ <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
