--- a/public/mymanage/login.html
+++ b/public/mymanage/login.html
@@ -6,6 +6,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="lib/bootstrap-validator/css/bootstrapValidator.min.css">
+  <link rel="stylesheet" href="lib/nprogress/nprogress.css">
   <link rel="stylesheet" href="css/common.css">
 </head>
 <body class="body_bg">
@@ -42,6 +43,7 @@
  </div>
  <script src="lib/jquery/jquery.min.js"></script>
  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+ <script src="lib/nprogress/nprogress.js"></script>
  <!-- 表单校验 -->
  <script src="lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
  <script src="js/login.js"></script>
