--- a/public/back/index.html
+++ b/public/back/index.html
@@ -27,7 +27,7 @@
             <i class="glyphicon glyphicon-user"></i>
             <span>用户管理</span>
           </a></li>
-          <li><a href="#">
+          <li><a href="javascript:;" class="category">
             <i class="glyphicon glyphicon-th-list"></i>
             <span>分类管理</span>
           </a>
@@ -53,17 +53,52 @@
      <i class="glyphicon glyphicon-log-out"></i>
    </a>
   </div>
-  <div class="content"></div>
+ 
+    <div class="container-fluid">
+
+      <!-- 路径导航 -->
+      <ol class="breadcrumb">
+        <li><a href="#">管理系统</a></li>
+        <li style='color:#ccc'>首页</li>
+        
+      </ol>
+
+      <!-- echarts 数据可视化 -->
+      <!-- 第一步 准备一个有宽高的盒子 -->
+
+      <div id="main" >
+        <div class="pull-left echarts1"></div>
+        <div class="pull-right echarts2 "></div>
+      </div>
+     </div>
+ </div>
+ 
+ <!-- 模态框 -->
+
+ <div class="modal fade" tabindex="-1" id="logoutModal">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">温馨提示</h4>
+      </div>
+      <div class="modal-body text text-danger">
+      <p> <i class="glyphicon glyphicon-info-sign"></i> 您确定要退出后台管理系统吗？</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+        <button type="button" class="btn btn-primary" id="logout">退出</button>
+      </div>
+    </div>
+  </div>
 </div>
-
-
-
 
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="lib/nprogress/nprogress.js"></script>
   <!-- 表单校验 -->
   <script src="lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+  <script src="./lib/echarts/echarts.min.js"></script>
   <script src="js/index.js"></script>
 </body>
 </html>
