首页补充功能

--- a/public/back/user.html
+++ b/public/back/user.html
@@ -59,19 +59,14 @@
       <!-- 路径导航 -->
       <ol class="breadcrumb">
         <li><a href="index.html">管理系统</a></li>
-        <li style='color:#ccc'>首页</li>
+        <li style='color:#ccc'>用户管理</li>
         
       </ol>
 
       <!-- echarts 数据可视化 -->
       <!-- 第一步 准备一个有宽高的盒子 -->
 
-      <div id="main" >
-        <div class="pull-left echarts1"></div>
-        <div class="pull-right echarts2 "></div>
-      </div>
-     </div>
- </div>
+ 
  
  <!-- 模态框 -->
 
@@ -98,7 +93,7 @@
   <script src="lib/nprogress/nprogress.js"></script>
   <!-- 表单校验 -->
   <script src="lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
-  <script src="./lib/echarts/echarts.min.js"></script>
-  <script src="js/index.js"></script>
+  
+  <script src="js/user.js"></script>
 </body>
 </html>
