--- a/public/back/user.html
+++ b/public/back/user.html
@@ -140,6 +140,7 @@
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="lib/nprogress/nprogress.js"></script>
+  <script src="js/common.js"></script>
   <!-- 表单校验 -->
   <script src="lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
   <script src="lib/artTemplate/template-web.js"></script>
